--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <footer>
         <div class="center">
-            Copyright &copy; www.Myonline.com. All rights reserved.
+            Copyright &copy; www.onlinegrocerystore.com. All rights reserved.By Satwick Deep Verma.
         </div>
     </footer>
 
